updates to footer

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,9 +1,9 @@
 <footer class="bg-[#D90069] md:px-24 md:py-16 font-nunito py-2 px-2">
   <div class="border-b-2 border-r-0 border-l-0 border-t-0 border-white flex justify-center mt-6 py-2">
       <div class="flex md:gap-8 gap-2 items-center md:p-7 p-1 cursor-pointer mt-4">
-          <div class="text-white hover:text-[#fdd3e7] md:text-base text-sm">About Us</div>
-          <div class="text-white hover:text-[#fdd3e7] md:text-base text-sm">Blog Post</div>
-          <div class="text-white hover:text-[#fdd3e7] md:text-base text-sm">Contact Us</div>
+          <div class="text-white hover:text-[#fdd3e7] md:text-base text-sm" routerLink="/about-us">About Us</div>
+          <div class="text-white hover:text-[#fdd3e7] md:text-base text-sm" routerLink="/">Blog Post</div>
+          <div class="text-white hover:text-[#fdd3e7] md:text-base text-sm" routerLink="/contact-us">Contact Us</div>
           <div class="text-white hover:text-[#fdd3e7] md:text-base text-sm">NewsLetter</div>
       </div>
   </div>
